--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
+  "homepage": "https://sajal243.github.io/resizable-window",
   "name": "resizable-components",
   "version": "0.1.0",
-  "homepage": "https://sajal243.github.io/react-gh-pages",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
