--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://sajal243.github.io/resizable-window",
+  "homepage": "https://sajal243.github.io/resizable",
   "name": "resizable-components",
   "version": "0.1.0",
   "private": true,
